2013-02-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mpformats/_nroff.tcl: Modified the formatting of dots (".").
	* pkgIndex.tcl: Always quote them with \& (zero-width escape).
	* doctools.tcl: Updated test results. Version bumped to 1.4.16.
	* doctools.man:
	* modules/doctools/tests/nroff/00:
	* modules/doctools/tests/nroff/01:
	* modules/doctools/tests/nroff/02:
	* modules/doctools/tests/nroff/03:
	* modules/doctools/tests/nroff/04:
	* modules/doctools/tests/nroff/05:
	* modules/doctools/tests/nroff/06:
	* modules/doctools/tests/nroff/07:
	* modules/doctools/tests/nroff/08:


2013-02-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mpformats/_nroff.tcl (nroff_postprocess): Followup fixes to
	* mpformats/fmt.nroff: bugs found in branch "bug-3601370-td",
	* pkgIndex.tcl: Missing markup of several nroff directives as
	* doctools.tcl: such. Version bumped to 1.4.15.
	* doctools.man:

2013-02-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* changelog.tcl: flatten method added. Extension of for 'sak
	* changelog.man: review'. Simpler structured output. Bumped
	  version to 1.1.

2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	*

2013-01-29  Andreas Kupries  <andreask@activestate.com>

	* doctools.man: Bumped version to 1.4.14 for the
	* doctools.tcl: last change, see below.
	* pkgIndex.tcl:

2013-01-21  Andreas Kupries  <andreask@activestate.com>

	* checker.tcl: Added check to manpage_begin, reject spaces in title.
	* mpformats/c.msg: Message catalogs extended with new warning
	* mpformats/de.msg: 'mptitle' for spaces in the manpage title.
	* mpformats/en.msg: The french catalog contains the english
	* mpformats/fr.msg: text, and needs a translation.

2012-02-27  Andreas Kupries  <aku@hephaistos>

	* tests/text/04: Update the expected the result to match the new
	  actual result. See the 2011-12-13 last-second bugfix in